--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
         }
 
         .Prg{background-color:mediumOrchid;}
-        .Matte{background-color:indianRed;}
+        .Matte{background-color:PaleVioletRed;}
         .WID{background-color:lightGreen;}
-        .SSW{background-color:lightBlue;}
-        .SSP{background-color:lavender;}
-        .SSM{background-color:PaleVioletRed;}
         .Lunch{background-color:DarkGrey;}
 
     </style>
 </head>
 <body>
-<h1>Name: Ida Michelle Jacobsen <br>Student  Number: S351945
-</h1>
+<h1>Name: Ida Michelle Jacobsen <br>Student  Number: S351945</h1>
 <h2>A week of school</h2>
 <table>
     <thead>
@@ -50,7 +46,7 @@
         <td>09.30-10.15</td>
         <td class="Prg">Programing</td>
         <td class="Matte">Discrete <br> Mathematics</td>
-        <td class="SSM">Study-session <br> math</td>
+        <td class="Matte">Study-session <br> math</td>
         <td class="WID"> Web development and <br>inclusive design</td>
         <td class="WID">Web development and <br>inclusive design</td>
     </tr>
@@ -58,7 +54,7 @@
         <td>10.30-11.15</td>
         <td></td>
         <td></td>
-        <td class="SSM">Study-session <br> Math</td>
+        <td class="Matte">Study-session <br> Math</td>
         <td></td>
         <td class="WID">Web development and <br> inclusive design</td>
     </tr>
@@ -76,24 +72,24 @@
         <td></td>
         <td class="Matte">Discrete <br>mathematics</td>
         <td class="Prg">Programing</td>
-        <td class="SSP">Study-session <br>Programming</td>
+        <td class="Prg">Study-session <br>Programming</td>
     </tr>
     <tr>
         <td>13.30-14.15</td>
-        <td class="SSW">Study-session <br>
+        <td class="WID">Study-session <br>
             Web</td>
-        <td class="SSW">Study-session <br>
+        <td class="WID">Study-session <br>
             Web</td>
         <td class="Matte">Discrete <br> Mathematics</td>
         <td class="Prg">Programing</td>
-        <td class="SSP">Study-session <br>Programming</td>
+        <td class="Prg">Study-session <br>Programming</td>
     </tr>
     <tr>
         <td>15.30-16.15</td>
-        <td class="SSW">Study-session <br>
+        <td class="WID">Study-session <br>
         Web
         </td>
-        <td class="SSW">Study-session <br>
+        <td class="WID">Study-session <br>
             Web</td>
         <td></td>
         <td></td>
@@ -101,12 +97,9 @@
     </tr>
 </table>
 <ul>
-    <li><b class="Prg">Medium Orchid </b> is for programming</li>
-    <li><b class="Matte">IndianRed</b> is used on discrete mathematics</li>
-    <li><b class="WID">Light Green</b> is Web development and inclusive design</li>
-    <li><b class="SSP">Lavender</b> highlights the study sessions for programming</li>
-    <li><b class="SSM">PaleVioletRed</b> is used on study-sessions in discrete Mathematics</li>
-    <li><b class="SSW">Light blue</b> highligts studysessionss in web development and inclusive design</li>
+    <li><b class="Prg">Medium Orchid </b> is for programming and study sessions in programmin.</li>
+    <li><b class="Matte">Pale Violet Red</b> is used on discrete mathematics and study sessions in that.</li>
+    <li><b class="WID">Light Green</b> is Web development and inclusive design, as well as its respective studysessions.</li>
 </ul>
 </body>
 </html>
